--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,6 @@ h1{
   width: 100px;
 }
 
-
-#sleep-table{
-  display: none;
-}
-
-
 #back-button {
   width: 200px;
   height: 80px;
@@ -20,4 +14,103 @@ h1{
 
 #show-template{
   display: none;
+}
+
+#medication-table{
+  display: none;
+}
+
+#sleep-table{
+  display: none;
+}
+
+
+body {
+	margin: 0;
+	padding: 0;
+	background: #262626;
+}
+
+.center {
+	position: absolute;
+	top:15%;
+	left: 20%;
+	transform: translate(-50%,-50%);
+	padding: 20px;
+	background-color: #262626;
+	border: 5px solid #fff;
+	border-radius: 50%;
+	box-shadow: 45px 45px 45px rgba(0,0,0,.8);
+	z-index: 1;
+	overflow: hidden;
+
+}
+.center:before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: -50%;
+	width: 50%;
+	height: 100%;
+	background: rgba(0,0,0,.3);
+}
+.heart {
+	position: relative;
+	width: 100px;
+	height: 100px;
+	background: #f00;
+	transform: rotate(45deg) translate(10px,10px);
+	animation: animate 1s linear infinite;
+}
+.heart:before {
+	content: '';
+	width: 100%;
+	height: 100%;
+	background: #f00;
+	position: absolute;
+	top: -50%;
+	left: 0;
+	border-radius: 50%;
+}
+.heart:after {
+	content: '';
+	width: 100%;
+	height: 100%;
+	background: #f00;
+	position: absolute;
+	bottom: 0;
+	right: 50%;
+	border-radius: 50%;
+}
+
+@keyframes animate
+{
+	0%
+	{
+		transform: rotate(45deg) translate(10px,10px) scale(1);
+	}
+	25%
+	{
+		transform: rotate(45deg) translate(10px,10px) scale(1);
+	}
+	30%
+	{
+		transform: rotate(45deg) translate(10px,10px) scale(1.4);
+	}
+	50%
+	{
+		transform: rotate(45deg) translate(10px,10px) scale(1.2);
+	}
+	70%
+	{
+		transform: rotate(45deg) translate(10px,10px) scale(1.4);
+	}
+	90%
+	{
+		transform: rotate(45deg) translate(10px,10px) scale(1);
+	}
+	100%
+	{
+		transform: rotate(45deg) translate(10px,10px) scale(1);
+	}
 }
