--- a/css/styles.css
+++ b/css/styles.css
@@ -23,9 +23,23 @@ h1{
 #sleep-table{
   display: none;
 }
+#exercise-table{
+  display: none;
+}
+
+#food-table{
+  display: none;
+}
+#drink-table{
+  display: none;
+}
+
+#notes-table{
+  display: none;
+}
 
 
-body {
+/* body {
 	margin: 0;
 	padding: 0;
 	background: #262626;
@@ -33,7 +47,7 @@ body {
 
 .center {
 	position: absolute;
-	top:15%;
+	top:7%;
 	left: 20%;
 	transform: translate(-50%,-50%);
 	padding: 20px;
@@ -50,7 +64,7 @@ body {
 	position: absolute;
 	top: 0;
 	left: -50%;
-	width: 50%;
+	width: 100%;
 	height: 100%;
 	background: rgba(0,0,0,.3);
 }
@@ -113,4 +127,4 @@ body {
 	{
 		transform: rotate(45deg) translate(10px,10px) scale(1);
 	}
-}
+} */
