--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,13 @@ h1{
   width: 100px;
 }
 
+img {
+  width: 50px;
+  height: auto;
+  padding-left: 10px;
+  padding-bottom: 7px;
+}
+
 #back-button {
   width: 200px;
   height: 80px;
@@ -39,92 +46,163 @@ h1{
 }
 
 
-/* body {
-	margin: 0;
-	padding: 0;
-	background: #262626;
+.scrollbar {
+margin-left: 0px;
+float: left;
+height: 250px;
+width: 275px;
+background: #fff;
+overflow-y: scroll;
+margin-bottom: 0px;
+}
+.force-overflow {
+min-height: 450px;
 }
 
-.center {
-	position: absolute;
-	top:7%;
-	left: 20%;
-	transform: translate(-50%,-50%);
-	padding: 20px;
-	background-color: #262626;
-	border: 5px solid #fff;
-	border-radius: 50%;
-	box-shadow: 45px 45px 45px rgba(0,0,0,.8);
-	z-index: 1;
-	overflow: hidden;
+.scrollbar-primary::-webkit-scrollbar {
+width: 12px;
+background-color: #F5F5F5; }
+
+.scrollbar-primary::-webkit-scrollbar-thumb {
+border-radius: 10px;
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #4285F4; }
+
+.scrollbar-danger::-webkit-scrollbar-track {
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #F5F5F5;
+border-radius: 10px; }
+
+.scrollbar-danger::-webkit-scrollbar {
+width: 12px;
+background-color: #F5F5F5; }
+
+.scrollbar-danger::-webkit-scrollbar-thumb {
+border-radius: 10px;
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #ff3547; }
+
+.scrollbar-warning::-webkit-scrollbar-track {
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #F5F5F5;
+border-radius: 10px; }
+
+.scrollbar-warning::-webkit-scrollbar {
+width: 12px;
+background-color: #F5F5F5; }
+
+.scrollbar-warning::-webkit-scrollbar-thumb {
+border-radius: 10px;
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #FF8800; }
+
+.scrollbar-success::-webkit-scrollbar-track {
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #F5F5F5;
+border-radius: 10px; }
+
+.scrollbar-success::-webkit-scrollbar {
+width: 12px;
+background-color: #F5F5F5; }
+
+.scrollbar-success::-webkit-scrollbar-thumb {
+border-radius: 10px;
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #00C851; }
+
+.scrollbar-info::-webkit-scrollbar-track {
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #F5F5F5;
+border-radius: 10px; }
+
+.scrollbar-info::-webkit-scrollbar {
+width: 12px;
+background-color: #F5F5F5; }
+
+.scrollbar-info::-webkit-scrollbar-thumb {
+border-radius: 10px;
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #33b5e5; }
+
+.scrollbar-default::-webkit-scrollbar-track {
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #F5F5F5;
+border-radius: 10px; }
+
+.scrollbar-default::-webkit-scrollbar {
+width: 12px;
+background-color: #F5F5F5; }
+
+.scrollbar-default::-webkit-scrollbar-thumb {
+border-radius: 10px;
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #2BBBAD; }
+
+.scrollbar-secondary::-webkit-scrollbar-track {
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #F5F5F5;
+border-radius: 10px; }
+
+.scrollbar-secondary::-webkit-scrollbar {
+width: 12px;
+background-color: #F5F5F5; }
+
+.scrollbar-secondary::-webkit-scrollbar-thumb {
+border-radius: 10px;
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #aa66cc; }
+
+
+
+
+bcontainer{max-width:1170px; margin:auto;}
+.heart_img{margin:-60px 0 0 100px;}
+
+
+.heart_img img {
+    animation: 2.5s ease 0s normal none infinite running animateHeartBeat;
+    overflow: inherit;
+    position: relative; display:inline-block; max-width:100px;
 
 }
-.center:before {
-	content: '';
-	position: absolute;
-	top: 0;
-	left: -50%;
-	width: 100%;
-	height: 100%;
-	background: rgba(0,0,0,.3);
-}
-.heart {
-	position: relative;
-	width: 100px;
-	height: 100px;
-	background: #f00;
-	transform: rotate(45deg) translate(10px,10px);
-	animation: animate 1s linear infinite;
-}
-.heart:before {
-	content: '';
-	width: 100%;
-	height: 100%;
-	background: #f00;
-	position: absolute;
-	top: -50%;
-	left: 0;
-	border-radius: 50%;
-}
-.heart:after {
-	content: '';
-	width: 100%;
-	height: 100%;
-	background: #f00;
-	position: absolute;
-	bottom: 0;
-	right: 50%;
-	border-radius: 50%;
-}
 
-@keyframes animate
-{
-	0%
-	{
-		transform: rotate(45deg) translate(10px,10px) scale(1);
-	}
-	25%
-	{
-		transform: rotate(45deg) translate(10px,10px) scale(1);
-	}
-	30%
-	{
-		transform: rotate(45deg) translate(10px,10px) scale(1.4);
-	}
-	50%
-	{
-		transform: rotate(45deg) translate(10px,10px) scale(1.2);
-	}
-	70%
-	{
-		transform: rotate(45deg) translate(10px,10px) scale(1.4);
-	}
-	90%
-	{
-		transform: rotate(45deg) translate(10px,10px) scale(1);
-	}
-	100%
-	{
-		transform: rotate(45deg) translate(10px,10px) scale(1);
-	}
-} */
+@keyframes animateHeartBeat {
+0% {
+    transform: scale(1);
+}
+5% {
+    transform: scale(1.4);
+}
+10% {
+    transform: scale(1.3);
+}
+15% {
+    transform: scale(1.8);
+}
+50% {
+    transform: scale(1);
+}
+100% {
+    transform: scale(1);
+}
+}
+@keyframes animateHeartBeat {
+0% {
+    transform: scale(1);
+}
+5% {
+    transform: scale(1.4);
+}
+10% {
+    transform: scale(1.3);
+}
+15% {
+    transform: scale(1.8);
+}
+50% {
+    transform: scale(1);
+}
+100% {
+    transform: scale(1);
+}
+}
