--- a/css/styles.css
+++ b/css/styles.css
@@ -33,19 +33,8 @@ ul {
   text-decoration: underline;
   cursor: pointer;
 }
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
+.oddRow {
   background-color: #dddddd;
 }
 
