entry details page values are now editable

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,24 @@
 h1{
   text-align: center;
 }
+#editEntry {
+  float: right;
+}
 
 .row{
   margin: 0 auto;
   margin-right: -8%;
 }
-
+#hideId {
+  display: none;
+}
 #sleep {
   width: 100px;
 }
-
+.contenteditable {
+  cursor: pointer;
+  background-color: azure;
+}
 img {
   width: 50px;
   height: auto;
@@ -58,7 +66,7 @@ ul {
   color: blue;
 }
 #filteredSleepDates, #filteredMedicationsDates, #filteredExercisesDates, #filteredFoodDates, #filteredDrinkDates, #filteredGeneralDates li:hover {
-  text-decoration: underline;
+  /* text-decoration: underline; */
   cursor: pointer;
 }
 
